--- a/notebooks/sparseinference_vs_SAE.ipynb
+++ b/notebooks/sparseinference_vs_SAE.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "e027ef4c",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "minimum M to solve problem 2.180996183808787\n"
+      "minimum M to solve problem 8.723984735235147\n"
      ]
     }
    ],
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "bfd56ec6",
    "metadata": {},
    "outputs": [
@@ -347,38 +347,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 1000 loss 2889.69580078125 MCC 0.3317678000088302\n",
-      "step 2000 loss 281.9867248535156 MCC 0.5570767602799197\n",
-      "step 3000 loss 101.11247253417969 MCC 0.6597658622288836\n",
-      "step 4000 loss 59.033905029296875 MCC 0.7024683263882866\n",
-      "step 5000 loss 50.39299011230469 MCC 0.7460499533401187\n",
-      "step 6000 loss 46.25288772583008 MCC 0.7913615170147228\n",
-      "step 7000 loss 43.886024475097656 MCC 0.8289848486388179\n",
-      "step 8000 loss 42.904762268066406 MCC 0.8465190616076954\n",
-      "step 9000 loss 42.71367263793945 MCC 0.8462760197936952\n",
-      "step 10000 loss 43.41572570800781 MCC 0.8367758061481654\n",
-      "step 11000 loss 44.081336975097656 MCC 0.815882485806035\n",
-      "step 12000 loss 45.986541748046875 MCC 0.7790156569136206\n",
-      "step 13000 loss 48.760765075683594 MCC 0.7287210132803332\n",
-      "step 14000 loss 49.45968246459961 MCC 0.7012055604538432\n",
-      "step 15000 loss 50.165855407714844 MCC 0.6805386945558707\n",
-      "step 16000 loss 49.85793685913086 MCC 0.668346255949066\n",
-      "step 17000 loss 50.00862503051758 MCC 0.649128137552163\n",
-      "step 18000 loss 49.94623947143555 MCC 0.6414543756718958\n",
-      "step 19000 loss 49.60426712036133 MCC 0.6199245782322875\n",
-      "final MCC 0.6108009689667637\n"
+      "step 1000 loss 2900.755859375 MCC 0.3400785499128721\n",
+      "step 2000 loss 61.131675720214844 MCC 0.8507947371430317\n",
+      "step 3000 loss 36.01312255859375 MCC 0.9124316049494366\n",
+      "step 4000 loss 30.06017303466797 MCC 0.9391271118779269\n",
+      "step 5000 loss 27.88093376159668 MCC 0.9579500754524453\n",
+      "step 6000 loss 26.688621520996094 MCC 0.9717509279865721\n",
+      "step 7000 loss 25.95534896850586 MCC 0.980714718295348\n",
+      "step 8000 loss 25.487638473510742 MCC 0.9859537545689596\n",
+      "step 9000 loss 25.17985725402832 MCC 0.9888656632546955\n",
+      "step 10000 loss 24.97623634338379 MCC 0.9906697090529145\n",
+      "step 11000 loss 24.85106658935547 MCC 0.991484806266179\n",
+      "step 12000 loss 24.77254295349121 MCC 0.9918494425092037\n",
+      "step 13000 loss 24.72405242919922 MCC 0.9920430346145767\n",
+      "step 14000 loss 24.69402503967285 MCC 0.9922885619146616\n",
+      "step 15000 loss 24.675575256347656 MCC 0.9924467945815834\n",
+      "step 16000 loss 24.664522171020508 MCC 0.9924871805462621\n",
+      "step 17000 loss 24.657730102539062 MCC 0.9924986718406641\n",
+      "step 18000 loss 24.65350341796875 MCC 0.9925428722171052\n",
+      "step 19000 loss 24.650901794433594 MCC 0.9925447599982158\n",
+      "final MCC 0.9925457402577343\n"
      ]
     }
    ],
    "source": [
-    "sc0 = SparseCoding(S, D, learn_D=True, seed=seed).to(device)\n",
+    "sc0 = SparseCoding(S, D, learn_D=False, seed=seed).to(device)\n",
     "S_ = train(sc0)\n",
     "# analyze(S, S_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "82c395ec",
    "metadata": {},
    "outputs": [
@@ -388,11 +388,11 @@
      "text": [
       "SparseCoding activations shape: torch.Size([1024, 16])\n",
       "SparseCoding activations L0 norm: 16384.0\n",
-      "SparseCoding activations L1 norm: 4778.845703125\n",
-      "SparseCoding activations mean: 0.29168078303337097\n",
-      "SparseCoding activations std: 0.5302740335464478\n",
-      "SparseCoding activations min: 5.949500447854916e-09\n",
-      "SparseCoding activations max: 5.095272541046143\n",
+      "SparseCoding activations L1 norm: 2451.865966796875\n",
+      "SparseCoding activations mean: 0.149651899933815\n",
+      "SparseCoding activations std: 0.40375491976737976\n",
+      "SparseCoding activations min: 4.205202408513742e-09\n",
+      "SparseCoding activations max: 3.7030467987060547\n",
       "\n",
       "\n"
      ]
