--- a/wild/testing.ipynb
+++ b/wild/testing.ipynb
@@ -133,61 +133,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import yaml\n",
-    "import einops\n",
-    "\n",
-    "def tokenize_and_concatenate(\n",
-    "    dataset,\n",
-    "    tokenizer,\n",
-    "    streaming=False,\n",
-    "    max_length=1024,\n",
-    "    column_name=\"text\",\n",
-    "    add_bos_token=True,\n",
-    "):\n",
-    "    for key in dataset.features:\n",
-    "        if key != column_name:\n",
-    "            dataset = dataset.remove_columns(key)\n",
-    "    if tokenizer.pad_token is None:\n",
-    "        tokenizer.add_special_tokens({\"pad_token\": \"<PAD>\"})\n",
-    "    seq_len = max_length - 1 if add_bos_token else max_length\n",
-    "\n",
-    "    def tokenize_function(examples):\n",
-    "        text = examples[column_name]\n",
-    "        full_text = tokenizer.eos_token.join(text)\n",
-    "        num_chunks = 20\n",
-    "        chunk_length = (len(full_text) - 1) // num_chunks + 1\n",
-    "        chunks = [\n",
-    "            full_text[i * chunk_length : (i + 1) * chunk_length]\n",
-    "            for i in range(num_chunks)\n",
-    "        ]\n",
-    "        tokens = tokenizer(chunks, return_tensors=\"np\", padding=True)[\n",
-    "            \"input_ids\"\n",
-    "        ].flatten()\n",
-    "        tokens = tokens[tokens != tokenizer.pad_token_id]\n",
-    "        num_tokens = len(tokens)\n",
-    "        num_batches = num_tokens // seq_len\n",
-    "        tokens = tokens[: seq_len * num_batches]\n",
-    "        tokens = einops.rearrange(\n",
-    "            tokens, \"(batch seq) -> batch seq\", batch=num_batches, seq=seq_len\n",
-    "        )\n",
-    "        if add_bos_token:\n",
-    "            prefix = np.full((num_batches, 1), tokenizer.bos_token_id)\n",
-    "            tokens = np.concatenate([prefix, tokens], axis=1)\n",
-    "        return {\"tokens\": tokens}\n",
-    "\n",
-    "    tokenized_dataset = dataset.map(\n",
-    "        tokenize_function, batched=True, remove_columns=[column_name]\n",
-    "    )\n",
-    "    return tokenized_dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -385,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Abu al Baghdadi is dead"
+    "# Autointerpretability"
    ]
   },
   {
@@ -2848,7 +2793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
